# procure

./: .cursorrules  .gitignore  Dockerfile  PRODUCT_REQUIREMENTS.md  README.md  docker-compose.yml  env.example  pyproject.toml
api/: dependencies.py
api/agents/: clarification_agent.py  enrichment_agent.py  processing_agent.py  search_agent.py  targeting_agent.py
api/models/: tasks.py
api/routers/: analysis.py
app/: factor_templates.json  main.py  utils.py
app/agents/: formatting_agent.py
app/models/: factors.py  queries.py
frontend/: Dockerfile  components.json  package-lock.json  package.json  tailwind.config.cjs  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: analysis-form.tsx  clarification-form.tsx  results-viewer.tsx  status-stepper.tsx  task-list-item.tsx
frontend/src/services/: api.ts
